# MathsCPP

./: CMakeLists.txt  CMakeSettings.json  Colour.cpp  Colour.hpp  Duration.cpp  Duration.hpp  Logger.cpp  Logger.hpp  Maths.cpp  Maths.hpp  Matrix.cpp  Matrix.hpp  Matrix.inl  Quaternion.cpp  Quaternion.hpp  Rectangle.cpp  Rectangle.hpp  Vector.cpp  Vector.hpp  Vector.inl  main.cpp
.github/workflows/: ci_linux_clang.yml  ci_linux_gcc.yml  ci_macos_clang.yml  ci_windows_msvc.yml
